--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Dokument</title>
 </head>
+
 <body>
-    This is first commit!
-    This is second commit!
+    <div class="header">
+      <h1>Logo</h1>
+    </div>
+    This is first commit! This is second commit! This is 33 commit!
 </body>
+
 </html>
