--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       <h1>Logo</h1>
     </div>
     This is first commit! This is second commit! This is 33 commit!
+    <div class="footer">
+        footer is good
+        and
+
+    </div>
 </body>
 
 </html>
