--- a/HW module 1-2/Add task 3 to the module 1-2.html
+++ b/HW module 1-2/Add task 3 to the module 1-2.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <header><h4>Дополнительное задание №3 Модуль 1-2 выполнил Пилипенко Александр</h4></header>
     <ol>
         <li><a href="https://www.facebook.com">facebook</a></li>
         <li><a href="https://www.linkedin.com">linkedin</a></li>
